# HKPUG-Meetup82-StructuredOutputWithLLM

./: .env.example  Makefile  README.md
src/example-1-instructor-basics/: main.py  pyproject.toml
src/example-2-instructor-streaming/: docker-compose.yml
src/example-2-instructor-streaming/backend/: dockerfile  main.py  pyproject.toml
src/example-2-instructor-streaming/frontend/: .env.example  dockerfile  index.html  package-lock.json  package.json
src/example-2-instructor-streaming/frontend/nginx/: nginx.conf
src/example-2-instructor-streaming/frontend/src/: App.tsx  vite-env.d.ts
src/example-2-instructor-streaming/frontend/src/useStore/: useResumeStore.ts
src/example-3-instructor-enum/: dockerfile  main.py  pyproject.toml
src/example-4-instructor-with-completions/: main.py  pyproject.toml
src/example-5-baml/: main.py  pyproject.toml
src/example-5-baml/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
src/example-5-baml/baml_src/: clients.baml  resume.baml
