[project]
name = "example-2-instructor-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "fireworks-ai>=0.15.12",
    "instructor>=1.7.2",
    "openai>=1.64.0",
    "orjson>=3.10.15",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]
